--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1152,10 +1152,10 @@ pre[class*=" language-"] {
 .loader {
   text-align: center; }
 
-@media (min-width: 1536px) {
-  ._demo--container {
-    width: 1520px;
-    margin: 0rem auto; } }
+//@media (min-width: 768px) {
+//  ._demo--container {
+//    width: 760px;
+//    margin: 0rem auto; } }
 
 @media (min-width: 1200px) {
   ._demo--container {
